-
Bug
-
Resolution: Fixed
-
Major
-
None
-
3
-
9223372036854775807
[ 1832.493775] LNet: 26562:0:(socklnd_cb.c:425:ksocknal_txlist_done()) Deleting packet type 1 len 520 172.18.1.3@tcp->172.18.1.4@tcp [ 1870.590047] LustreError: 20610:0:(mgc_request.c:249:do_config_log_add()) MGC172.18.1.3@tcp: failed processing log, type 4: rc = -110 [ 1882.605517] LustreError: 23042:0:(mdt_handler.c:5135:mdt_init0()) ASSERTION( info != ((void *)0) ) failed: [ 1882.616438] LustreError: 23042:0:(mdt_handler.c:5135:mdt_init0()) LBUG
The dk log shows the next steps
started cleanup of MDT01
started cleanup of MDT00
finished cleanup of MDT01, and cleanup of MDS also
started MDT01 mount + setup of MDS
finished setup of MDS
finished cleanup of MDT00, and cleanup of MDS also
asserted during MDT01 initialization
The main problem is MDS was stopped during MDT01 mount. It looks like wrong cleanup of MDS.