lustre/include/obd_support.h
@@ -462,6 +462,7 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_OBD_NO_LRU		 0x609
 #define OBD_FAIL_OBDCLASS_MODULE_LOAD	 0x60a
 #define OBD_FAIL_OBD_ZERO_NLINK_RACE	 0x60b
+#define OBD_FAIL_OBD_STOP_MDS_RACE	 0x60c
 
 #define OBD_FAIL_TGT_REPLY_NET           0x700
 #define OBD_FAIL_TGT_CONN_RACE           0x701
